Profile Picture and Contact page changes

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                     <option value="Other">Other</option>
                 </select> <br>
                 Your Message: <br>
-                <input type="text" name="VisitorMessage" class="message" placeholder="Your Message" required> <br>
+                <textarea name="VisitorMessage" class="message" placeholder="Your Message" required></textarea> <br>
                 <input type="submit" class="submit" value="send">
             </form>
         </div>
