--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
     <div class="profile_container">
         <div class="profile_header">
-            <img class="profile_pic" src="images/Place_Holder.png" alt="head shot">
+            <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">
         </div>
         <div class="profile_about">
             <p class="about">aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
