Projects Page Initial Set Up

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,67 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="title-container">
+        <h1 class="my-proj-title">My Projects</h1>
+        <div class="search-container">
+            <h4>Search Projects By Code Use :</h4>
+            <input type="search" name="project-search" id="searchbox">
+        </div>
+        
+
+    </div>
+
+    <div class="projects-container">
+
+        <!-- Copy This To Make New Project Selection -->
+        <div class="project">
+
+            <div class="project-info">
+                <h3>Project One</h3>
+            </div>
+
+            <div>
+                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
+            </div>
+
+        </div>
+        <!-- To Here !! -->
+
+        <div class="project">
+
+            <div class="project-info">
+                <h3>Project One</h3>
+            </div>
+
+            <div>
+                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
+            </div>
+
+        </div>
+        <div class="project">
+
+            <div class="project-info">
+                <h3>Project One</h3>
+            </div>
+
+            <div>
+                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
+            </div>
+
+        </div>
+        <div class="project">
+
+            <div class="project-info">
+                <h3>Project One</h3>
+            </div>
+
+            <div>
+                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
+            </div>
+
+        </div>
+
+    </div>
 
 
     <nav id="bottom-nav">
