--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
             <li><a id="links" href="index.html">Home</a></li>
-            <li><a id="links" href="about.html">About Me</a></li>
+            <li><a id="links" href="about.html">About</a></li>
             <li><a id="links" href="projects.html">Projects</a></li>
         </ul>
     </nav>
