Project Page Enhancement

--- a/projects.html
+++ b/projects.html
@@ -5,73 +5,64 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="title-container">
-        <h1 class="my-proj-title">My Projects</h1>
-        <div class="search-container">
-            <h4>Search Projects By Code Use :</h4>
-            <input type="search" name="project-search" id="searchbox">
+    <div id="page-container">
+        <div class="title-container">
+            <h1 class="Name">My Projects</h1>
         </div>
-        
 
-    </div>
+        <div class="projects-container">
 
-    <div class="projects-container">
+            <!-- Copy This To Make New Project Selection -->
+            <div class="project">
 
-        <!-- Copy This To Make New Project Selection -->
-        <div class="project">
+                <div class="project-info">
+                    <h3>Customizable List</h3>
+                    <p>This was an introduction project<br>covering the basics of DOM manipulation</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                    </div>
 
-            <div class="project-info">
-                <h3>Project One</h3>
+                </div>
+
+                <div class="image-box">
+                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank"><img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                </div>
+
             </div>
+            <!-- To Here !! -->
 
-            <div>
-                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
-            </div>
+            <div class="project">
 
-        </div>
-        <!-- To Here !! -->
+                <div class="project-info">
+                    <h3>Robo Friends</h3>
+                    <p>This was an introduction project<br>covering the basics of React</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                        <img class="icon" src="./images/React_Icon.png" alt="javascript">
+                    </div>
 
-        <div class="project">
+                </div>
 
-            <div class="project-info">
-                <h3>Project One</h3>
-            </div>
+                <div class="image-box">
+                    <a href="https://toto-titan-developer.github.io/robofriends/" target="blank"><img class="project-image" src="./images/RoboFriends_Project.png" alt="project"></a>
+                </div>
 
-            <div>
-                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
-            </div>
-
-        </div>
-        <div class="project">
-
-            <div class="project-info">
-                <h3>Project One</h3>
-            </div>
-
-            <div>
-                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
-            </div>
-
-        </div>
-        <div class="project">
-
-            <div class="project-info">
-                <h3>Project One</h3>
-            </div>
-
-            <div>
-                <a href="#!"><img src="/images/Place_Holder.png" alt="project"></a>
             </div>
 
         </div>
-
     </div>
 
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
             <li><a id="links" href="contact.html">Contact</a></li>
-            <li><a id="links" href="about.html">About Me</a></li>
+            <li><a id="links" href="about.html">About</a></li>
             <li><a id="links" href="index.html">Home</a></li>
         </ul>
     </nav>
