Email Submission Test One

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
-            <li><a id="links" href="contact.html">Contact</a></li>
+            <li><a id="links" href="contact.php">Contact</a></li>
             <li><a id="links" href="about.html">About</a></li>
             <li><a id="links" href="projects.html">Projects</a></li>
         </ul>
