--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
-            <li><a id="links" href="contact.html">Contact</a></li>
+            <li><a id="links" href="contact.php">Contact</a></li>
             <li><a id="links" href="index.html">Home</a></li>
             <li><a id="links" href="projects.html">Projects</a></li>
         </ul>
