--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
-            <li><a id="links" href="contact.html">Contact</a></li>
+            <li><a id="links" href="contact.php">Contact</a></li>
             <li><a id="links" href="about.html">About</a></li>
             <li><a id="links" href="index.html">Home</a></li>
         </ul>
