--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
 <body>
     <div id="form-align">
         <div id="form-bg">
-            <form action="contact.html" method="POST" enctype="multipart/form-data" name="EmailTetsForm">
+            <form action="contact.php" method="POST" enctype="text/plain" name="EmailTetsForm">
                 Email: <br>
-                <input type="email" name="VisitorEmail" placeholder="Enter Your Email" required> <br>
+                <input type="email" name="VisitorEmail" placeholder="Enter Your Email"> <br>
                 Name: <br>
                 <input type="text" name="VisitorName" placeholder="Enter Your Name" required> <br>
                 Reason for Contacting: <br>
