Design Enhancements + Icon Add Ins

--- a/about.html
+++ b/about.html
@@ -5,9 +5,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="bkg-st">
+        <div class="bkg-st-1"></div>
+    </div>
     <div class="profile_container">
         <div class="profile_header">
+            <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
             <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">
+            <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
         </div>
         <div class="profile_about">
             <p class="about">aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
