--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="bkg-st">
+        <div class="bkg-st-1"></div>
+    </div>
     <div id="page-container">
         <div class="title-container">
-            <h1 class="Name">My Projects</h1>
+            <h1 class="Name"><img class="logo-3" src="images/idea_icon.png" alt="icon">My Projects</h1>
         </div>
 
         <div class="projects-container">
