--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="bkg-st">
+        <div class="bkg-st-1"></div>
+    </div>
     <div class="title-box">
         <div class="title">
             <h1>My Name Is <p class="Name">Wyatt Henderson</p>Your Full Stack Developer</h1>
