--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Practice Server</title>
+    <title>W.H Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
