Revamp of Design and Backgroung + Optimization

--- a/about.html
+++ b/about.html
@@ -5,36 +5,22 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st">
-        <div class="bkg-st-1"></div>
-    </div>
+    <div class="bkg-st"></div>
     <div class="profile_container">
-        <div class="profile_header">
+        <div class="profile_header fade-in">
             <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
             <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">
             <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
         </div>
         <div class="profile_about">
-            <p class="about">aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
-                kjd a flk ajk lajf lkajf kaj dflk jkl djka ldfjal kjfd kda jlfd jfl 
-                kad jldk jfl adkjf dlak jflda kjf lkadj fkla djfk ljda lkfj adlkf jklajf 
-                lkadj fkla djfldk ajflka djflka jlkfj ldakjfdl dka jf lkad jhj 
-                aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
-                kjd a flk ajk lajf lkajf kaj dflk jkl djka ldfjal kjfd kda jlfd jfl 
-                kad jldk jfl adkjf dlak jflda kjf lkadj fkla djfk ljda lkfj adlkf jklajf 
-                lkadj fkla djfldk ajflka djflka jlkfj ldakjfdl dka jf lkad jhj 
-                aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
-                kjd a flk ajk lajf lkajf kaj dflk jkl djka ldfjal kjfd kda jlfd jfl 
-                kad jldk jfl adkjf dlak jflda kjf lkadj fkla djfk ljda lkfj adlkf jklajf 
-                lkadj fkla djfldk ajflka djflka jlkfj ldakjfdl dka jf lkad jhj 
-                aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
-                kjd a flk ajk lajf lkajf kaj dflk jkl djka ldfjal kjfd kda jlfd jfl 
-                kad jldk jfl adkjf dlak jflda kjf lkadj fkla djfk ljda lkfj adlkf jklajf 
-                lkadj fkla djfldk ajflka djflka jlkfj ldakjfdl dka jf lkad jhj 
-                aklajflkad jf k ldaj kldjflkaj fldkfj klajdf kldajfl 
-                kjd a flk ajk lajf lkajf kaj dflk jkl djka ldfjal kjfd kda jlfd jfl 
-                kad jldk jfl adkjf dlak jflda kjf lkadj fkla djfk ljda lkfj adlkf jklajf 
-                lkadj fkla djfldk ajflka djflka jlkfj ldakjfdl dka jf lkad jhj</p>
+            <p class="about info1 slide-anim-l">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
+            <img class="about about-image fade-in" src="images/Mountains_Pic.JPG" alt="image">
+            <img class="about about-image fade-in" src="images/Mountains_Pic2.JPG" alt="image">
+            <p class="about info2 slide-anim-r">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
+            <p class="about info3 slide-anim-l">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
+            <img class="about about-image fade-in" src="images/Stained_Glass.JPG" alt="image">
+            <img class="about about-image fade-in" src="images/Canadian_Open.JPG" alt="image">
+            <p class="about info4 slide-anim-r">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
         </div>
     </div>
 
