--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st">
-        <div class="bkg-st-1"></div>
-    </div>
-    <div id="form-align">
-        <div id="form-bg">
+    <div class="bkg-st"></div>
+    <div id="form-align" class="fade-in">
+        <div id="form-bg" class="slide-anim-r">
             <form action="contact.php" method="POST" enctype="multipart/form-data" name="EmailTetsForm">
                 Email: <br>
                 <input type="email" name="VisitorEmail" placeholder="Enter Your Email"> <br>
