--- a/projects.html
+++ b/projects.html
@@ -5,18 +5,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st">
-        <div class="bkg-st-1"></div>
-    </div>
+    <div class="bkg-st"></div>
     <div id="page-container">
-        <div class="title-container">
-            <h1 class="Name"><img class="logo-3" src="images/idea_icon.png" alt="icon">My Projects</h1>
+        <div class="title-container fade-in">
+            <h1 class="Name slide-anim-l"><img class="logo-3" src="images/idea_icon.png" alt="icon">My Projects</h1>
         </div>
 
         <div class="projects-container">
 
             <!-- Copy This To Make New Project Selection -->
-            <div class="project">
+            <div class="project fade-in">
 
                 <div class="project-info">
                     <h3>Customizable List</h3>
@@ -30,14 +28,14 @@
 
                 </div>
 
-                <div class="image-box">
+                <div class="image-box slide-anim-l">
                     <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank"><img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
                 </div>
 
             </div>
             <!-- To Here !! -->
 
-            <div class="project">
+            <div class="project fade-in">
 
                 <div class="project-info">
                     <h3>Robo Friends</h3>
@@ -52,7 +50,7 @@
 
                 </div>
 
-                <div class="image-box">
+                <div class="image-box slide-anim-l">
                     <a href="https://toto-titan-developer.github.io/robofriends/" target="blank"><img class="project-image" src="./images/RoboFriends_Project.png" alt="project"></a>
                 </div>
 
