--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <li><a id="links" href="projects.html">Projects</a></li>
         </ul>
     </nav>
+
+    <div class="cougar-anim"></div>
     
 
     <script type="text/javascript" src="script.js"></script>
