--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
 
-    <div class="cougar-anim"></div>
+    <div class="cougar-moving"><div class="cougar-anim"></div></div>
     
 
     <script type="text/javascript" src="script.js"></script>
