Addicing new Project to Projects and altering some animations

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,8 @@
                 </div>
 
                 <div class="image-box slide-anim-l">
-                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank"><img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
+                    <a href="https://toto-titan-developer.github.io/Customizable_List/" target="blank">
+                        <img class="project-image" src="./images/CustomList_Project.png" alt="project"></a>
                 </div>
 
             </div>
@@ -51,7 +52,29 @@
                 </div>
 
                 <div class="image-box slide-anim-l">
-                    <a href="https://toto-titan-developer.github.io/robofriends/" target="blank"><img class="project-image" src="./images/RoboFriends_Project.png" alt="project"></a>
+                    <a href="https://toto-titan-developer.github.io/robofriends/" target="blank">
+                        <img class="project-image" src="./images/RoboFriends_Project.png" alt="project"></a>
+                </div>
+
+            </div>
+
+            <div class="project fade-in">
+
+                <div class="project-info">
+                    <h3>Star Wars Character Generator</h3>
+                    <p>This was an introduction project<br>covering the basics of using an  API</p>
+                    <h4>Built With :</h4>
+                    <div class="components">
+                        <img class="icon" src="./images/HTML5_Icon.png" alt="HTML">
+                        <img class="icon" src="./images/CSS3-Icon.png" alt="CSS">
+                        <img class="icon" src="./images/JS-Icon.png" alt="javascript">
+                    </div>
+
+                </div>
+
+                <div class="image-box slide-anim-l">
+                    <a href="https://toto-titan-developer.github.io/StarWarsChar-Generator/" target="blank">
+                        <img class="project-image" src="./images/StarWars_Project.png" alt="project"></a>
                 </div>
 
             </div>
