--- a/about.html
+++ b/about.html
@@ -26,11 +26,13 @@
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
-            <li><a id="links" href="contact.html">Contact</a></li>
+            <li></li>
             <li><a id="links" href="index.html">Home</a></li>
+            <li><a id="active" href="about.html">About</a></li>
             <li><a id="links" href="projects.html">Projects</a></li>
+            <li><a id="links" href="contact.html">Contact</a></li>
         </ul>
-    </nav>   
+    </nav>
 
     <script type="text/javascript" src="script.js"></script>
 </body>
