--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
     <div class="title-box">
         <div class="title slide-anim-l">
             <h1 class="fade-in">My Name Is <p class="Name">Wyatt Henderson</p>Your Full Stack Developer</h1>
+            <a href="projects.html">
+                <div class="vmp-bg">
+                    <p>View my Projects</p>
+                </div>
+            </a>
+            
+            
         </div>
     </div>
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
-            <li><a id="links" href="contact.html">Contact</a></li>
+            <li></li>
+            <li><a id="active" href="index.html">Home</a></li>
             <li><a id="links" href="about.html">About</a></li>
             <li><a id="links" href="projects.html">Projects</a></li>
+            <li><a id="links" href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
