--- a/projects.html
+++ b/projects.html
@@ -85,9 +85,11 @@
 
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
-            <li><a id="links" href="contact.html">Contact</a></li>
-            <li><a id="links" href="about.html">About</a></li>
+            <li></li>
             <li><a id="links" href="index.html">Home</a></li>
+            <li><a id="links" href="about.html">About</a></li>
+            <li><a id="active" href="projects.html">Projects</a></li>
+            <li><a id="links" href="contact.html">Contact</a></li>
         </ul>
     </nav>
     
