--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 
                 <div  class="form-box" data-netlify-recaptcha="true"></div> <br>
 
-                <button type="submit" class="submit">
+                <button type="submit" class="submit form-box">
                     <img class="logo" src="images/mail_icon2.png" alt="mail">
                     Send
                 </button>
