--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav id="bottom-nav">
         <ul id="bottom-nav-links">
             <li></li>
+            <!-- <li><button id="active"><a  href="index.htm"></a>Home</button></li> -->
             <li><a id="active" href="index.html">Home</a></li>
             <li><a id="links" href="about.html">About</a></li>
             <li><a id="links" href="projects.html">Projects</a></li>
