Contact Page Touch Up

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <div id="form-align" class="fade-in">
         <div id="form-bg" class="slide-anim-r">
             <form class="form-grid" name="contact" method="POST" data-netlify="true">
+                <div></div>
                 <div class="form-box">
                     Email: <br>
                     <input type="email" name="email" placeholder="Enter Your Email"> <br>
@@ -37,6 +38,7 @@
                     <img class="logo" src="images/mail_icon2.png" alt="mail">
                     Send
                 </button>
+                <div></div>
             </form>
         </div>
     </div>
