--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
             <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">
             <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
         </div>
+        <div class="resume-bg">
+            <a href="documents/Resume W.H.pdf" target="blank">My Resume</a>
+        </div>
         <div class="profile_about">
             <p class="about info1 slide-anim-l">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
             <img class="about about-image fade-in" src="images/Mountains_Pic.JPG" alt="image">
