--- a/about.html
+++ b/about.html
@@ -8,9 +8,17 @@
     <div class="bkg-st"></div>
     <div class="profile_container">
         <div class="profile_header fade-in">
-            <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
-            <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">
-            <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
+            <div class="profile_style">
+                <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
+            </div>
+            <div class="profile_style">
+                <h1 class="Name">About Me</h1>
+                <img class="profile_pic" src="images/ProfilePic_1 (2).JPG" alt="head shot">              
+            </div>           
+            <div class="profile_style">
+                <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
+            </div>
+            
         </div>
         <div class="resume-bg">
             <a href="documents/Resume W.H.pdf" target="blank">My Resume</a>
@@ -31,8 +39,8 @@
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
-            <li><a id="active" href="about.html">About</a></li>
-            <li><a id="links" href="projects.html">Projects</a></li>
+            <li><a id="active" href="about.html">About Me</a></li>
+            <li><a id="links" href="projects.html">My Projects</a></li>
             <li><a id="links" href="contact.html">Contact</a></li>
         </ul>
     </nav>
