--- a/contact.html
+++ b/contact.html
@@ -47,8 +47,8 @@
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
-            <li><a id="links" href="about.html">About</a></li>
-            <li><a id="links" href="projects.html">Projects</a></li>
+            <li><a id="links" href="about.html">About Me</a></li>
+            <li><a id="links" href="projects.html">My Projects</a></li>
             <li><a id="active" href="contact.html">Contact</a></li>
         </ul>
     </nav>
