--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <li></li>
             <!-- <li><button id="active"><a  href="index.htm"></a>Home</button></li> -->
             <li><a id="active" href="index.html">Home</a></li>
-            <li><a id="links" href="about.html">About</a></li>
-            <li><a id="links" href="projects.html">Projects</a></li>
+            <li><a id="links" href="about.html">About Me</a></li>
+            <li><a id="links" href="projects.html">My Projects</a></li>
             <li><a id="links" href="contact.html">Contact</a></li>
         </ul>
     </nav>
