--- a/projects.html
+++ b/projects.html
@@ -87,8 +87,8 @@
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
-            <li><a id="links" href="about.html">About</a></li>
-            <li><a id="active" href="projects.html">Projects</a></li>
+            <li><a id="links" href="about.html">About Me</a></li>
+            <li><a id="active" href="projects.html">My Projects</a></li>
             <li><a id="links" href="contact.html">Contact</a></li>
         </ul>
     </nav>
