Background and Nav Bar Design Test 1

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st"></div>
+    <div class="bkg-st bkg_2"></div>
     <div class="profile_container">
         <div class="profile_header fade-in">
             <div class="profile_style">
@@ -17,11 +17,7 @@
             </div>           
             <div class="profile_style">
                 <img class="logo-2" src="images/cloud_icon.png" alt="cloud">
-            </div>
-            
-        </div>
-        <div class="resume-bg">
-            <a href="documents/Resume W.H.pdf" target="blank">My Resume</a>
+            </div>           
         </div>
         <div class="profile_about">
             <p class="about info1 slide-anim-l">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
@@ -33,9 +29,12 @@
             <img class="about about-image fade-in" src="images/Canadian_Open.JPG" alt="image">
             <p class="about info4 slide-anim-r">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt nesciunt repellendus adipisci, reprehenderit maxime aut blanditiis tempore doloremque, fugiat vel perferendis illum suscipit inventore quod similique dolorum dolore temporibus?</p>
         </div>
+        <div class="resume-bg">
+            <a href="documents/Resume W.H.pdf" target="blank">My Resume</a>
+        </div>
     </div>
 
-    <nav id="bottom-nav">
+    <nav class="bottom-nav nav-BG_4">
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
