--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st"></div>
+    <div class="bkg-st bkg_1"></div>
     <div class="title-box">
         <div class="title slide-anim-l">
             <h1 class="fade-in">My Name Is <p class="Name">Wyatt Henderson</p>Your Full Stack Developer</h1>
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <nav id="bottom-nav">
+    <nav class="bottom-nav nav-BG_3">
         <ul id="bottom-nav-links">
             <li></li>
             <!-- <li><button id="active"><a  href="index.htm"></a>Home</button></li> -->
