--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="bkg-st bkg_1"></div>
     <div class="title-box">
         <div class="title slide-anim-l">
-            <h1 class="fade-in">My Name Is <p class="Name">Wyatt Henderson</p>Your Full Stack Developer</h1>
+            <h1 class="fade-in"><p class="Name">Wyatt Henderson</p>Your Full Stack Developer</h1>
             <a href="projects.html">
                 <div class="vmp-bg">
                     <p>View my Projects</p>
