--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st bkg_4"></div>
+    <div class="bkg_1 bkg-st"></div>
     <div id="form-align" class="fade-in">
         <div id="form-bg" class="slide-anim-r">
             <form class="form-grid" name="contact" method="POST" data-netlify="true">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <nav class="bottom-nav nav-BG_2">
+    <nav class="bottom-nav">
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
