--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st bkg_2"></div>
+    <div class="bkg_2 bkg-st"></div>
     <div class="profile_container">
         <div class="profile_header fade-in">
             <div class="profile_style">
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    <nav class="bottom-nav nav-BG_4">
+    <nav class="bottom-nav">
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
