--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bkg-st bkg_3"></div>
+    <div class="bkg_2 bkg-st"></div>
     <div id="page-container">
         <div class="title-container fade-in">
             <h1 class="Name slide-anim-l"><img class="logo-3" src="images/idea_icon.png" alt="icon">My Projects</h1>
@@ -83,7 +83,7 @@
     </div>
 
 
-    <nav class="bottom-nav nav-BG_5">
+    <nav class="bottom-nav">
         <ul id="bottom-nav-links">
             <li></li>
             <li><a id="links" href="index.html">Home</a></li>
